treewide: move to fluent (lombok) accessors